infrastructure/kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
         - path: /api/users/?(.*) # anything to route mentioned should be forwared to pod below
           pathType: Prefix
           backend:
            service:
              name: auth-srv
              port:
                number: 3000
